# pycgrlib

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/pycgrlib/: __init__.py  datos.py  db.py  generador_datos.py  utils.py
