[metadata]
name = pycgrlib
version = 0.1.1
author = Mario Zamora Madriz
author_email = mario.andres.zamora@cgr.go.cr
description = Libreria de funciones para uso de herramientas en la Contraloria General de la Republica (CGR)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cgrcr/pycgrlib

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    python-dateutil
    GitPython

[options.packages.find]
where = src